@@ -14,6 +14,7 @@ Change log 1.0 (under development)
 * The test class is no longer recommended as a PrepareForTest candidate if a NPE occurs inside the test class.
 * Added createStrictPartialMockForAllMethodsExcept and createNicePartialMockForAllMethodsExcept to the PowerMock API.
 * The Whitebox API method getAllMethodExcept now traverses the class hierarchy looking for methods.
+* Fixed a bug in the verifyAll method of the PowerMock API, the state is now properly disposed.
 
 Change log 0.9 (released 2008-11-10)
 ------------------------------------
